tests/compile_fail/declare_scheduler_unknown_field.rs
use ktstr::declare_scheduler;

declare_scheduler!(MY_SCHED, {
    name = "my_sched",
    binary = "scx_my_sched",
    bogus = "value",
});

fn main() {}
